--- a/front/src/components/admin/admin.css
+++ b/front/src/components/admin/admin.css
@@ -1,19 +1,53 @@
 
-    .container {
-      margin:0;
-      width:100%
+    .blogList {
+      padding: 70px;
+      width: 100%;
     }
-    #customers {
-      font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-      border-collapse: collapse;
-      width: 800px;
-      /* height: ; */
+    .blogSave :active{
+      border: 1px solid #4CAF50;
     }
-    
+    .blogEdit {
+      border: 10px; 
+      border: 1px solid #aba5a5;
+      box-sizing: border-box; 
+      display: inline-block; 
+      font-family: Roboto, sans-serif; 
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+      cursor: pointer; 
+      text-decoration: none; 
+      margin: 5px; 
+      padding: 0px; 
+      outline: none; 
+      font-size: inherit; 
+      font-weight: inherit; 
+      transform: translate(0px, 0px); 
+      vertical-align: bottom; 
+      background-color: rgb(238, 238, 238); 
+      transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; 
+      position: relative; 
+      height: 40px; 
+      width: 40px; 
+      overflow: hidden; 
+      border-radius: 50%; 
+      text-align: center; 
+      fill: rgb(158, 158, 158);
+    }
+    .blogEdit :active{
+      border: 1px solid #4CAF50;
+    }
+    .blogEdit svg {
+      display: inline-block; 
+      color: rgb(255, 255, 255); 
+      fill: rgb(158, 158, 158); 
+      height: 40px; 
+      width: 24px; 
+      user-select: none; 
+      transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; 
+      line-height: 40px;
+    }
     #customers td, #customers th {
-      width: 250px;
       border: 1px solid #ddd;
-      padding: 8px;
+      word-break: break-word;
     }
     
     #customers tr:nth-child(even){background-color: #f2f2f2;}
@@ -21,12 +55,11 @@
     #customers tr:hover {background-color: #ddd;}
     
     #customers th {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      text-align: left;
+      padding: 12px 5px;
+      text-align: center;
       background-color: #4CAF50;
       color: white;
-    }
+    } 
     .buttonGroup {
       padding-top: 20px;
     }
